<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/scrollViewId"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="center_vertical">
	
    <TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/abouttitle"
	    android:textSize="15dip"
	    android:background="@color/white"
	    android:textColor="@color/black"
	    android:drawableBottom="@drawable/divider"
    />
    
    <TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/text1"
	    android:maxLines="21"
	    android:textSize="12dip"
	    android:background="@color/white"
	    android:textColor="@color/black"
	    android:drawableBottom="@drawable/divider"
	    android:width="10px"
	    android:layout_margin="20px"
    />
    <TextView
  android:text="@string/title2"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:textSize="15dip"
  android:gravity="center"
  android:background="@color/white"
  android:textColor="@color/black"
   android:drawableBottom="@drawable/divider"
   android:maxLines="21"
  ></TextView>
  <TextView
  android:text="@string/text2"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:textSize="12dip"
 
  android:background="@color/white"
  android:textColor="@color/black"
   android:drawableBottom="@drawable/divider"
   android:maxLines="21"
   android:width="10px"
   android:layout_margin="20px"
  ></TextView>
  <TextView
  android:text="@string/title3"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:textSize="15dip"
  android:gravity="center"
  android:background="@color/white"
  android:textColor="@color/black"
   android:drawableBottom="@drawable/divider"
   android:maxLines="21"
   
  ></TextView>
  <TextView
  android:text="@string/text3"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:textSize="12dip"
 
  android:background="@color/white"
  android:textColor="@color/black"
   android:drawableBottom="@drawable/divider"
   android:maxLines="21"
   android:width="10px"
   android:layout_margin="20px"
  ></TextView>
  <TextView
  android:text="@string/title4"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:textSize="15dip"
  android:gravity="center"
  android:background="@color/white"
  android:textColor="@color/black"
   android:drawableBottom="@drawable/divider"
   android:maxLines="21"
  ></TextView>
   <TextView
  android:text="@string/text4"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:textSize="12dip"
 
  android:background="@color/white"
  android:textColor="@color/black"
   android:drawableBottom="@drawable/divider"
   android:maxLines="21"
   android:width="10px"
   android:layout_margin="20px"
  ></TextView>
  <TextView
  android:text="@string/email"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:textSize="12dip"
  android:gravity="bottom"
  android:background="@color/white"
  android:textColor="@color/black"
  android:drawableBottom="@drawable/divider"
  android:paddingLeft="100px"
  ></TextView>
	
</LinearLayout>

</ScrollView>